Weight paint: Selected faces are not displayed with the wireframe modifier #75053

Closed
opened 2020-03-24 13:52:42 +01:00 by Konstantin · 10 comments

Blender Version
Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-03-12 05:06, hash: 375c7dc4ca
Worked: 2.79b

Short description of error
Selected faces do not match those displayed with the wireframe modifier
5e83e2bc9fb8ad4c6fdcb0569b153ad6.mp4

Exact steps for others to reproduce the error

**Blender Version** Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-03-12 05:06, hash: `375c7dc4ca` Worked: 2.79b **Short description of error** Selected faces do not match those displayed with the wireframe modifier [5e83e2bc9fb8ad4c6fdcb0569b153ad6.mp4](https://archive.blender.org/developer/F8426928/5e83e2bc9fb8ad4c6fdcb0569b153ad6.mp4) **Exact steps for others to reproduce the error** - Open attached file - Disable and enable the wireframe modifier. [weight_face_triangulate_bug.blend](https://archive.blender.org/developer/F8427094/weight_face_triangulate_bug.blend)
Author

Added subscriber: @youthatninja

Added subscriber: @youthatninja

#75176 was marked as duplicate of this issue

#75176 was marked as duplicate of this issue
Konstantin changed title from Weight paint: Gradient tool not working with mask and left click select to Weight paint: Gradient tool not working with mask 2020-03-24 13:57:09 +01:00

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Could you provide a simple file showing the problem?

Could you provide a simple file showing the problem?
Author

@mano-wii, here weight_mask.blend
I figured it out.
The problem is with triangulate modifier.
Gradient is working and respect the mask, but if add triangulate modifier, overlay for mask do not showing correctly

@mano-wii, here [weight_mask.blend](https://archive.blender.org/developer/F8427025/weight_mask.blend) I figured it out. The problem is with triangulate modifier. Gradient is working and respect the mask, but if add triangulate modifier, overlay for mask do not showing correctly
Germano Cavalcante changed title from Weight paint: Gradient tool not working with mask to Weight paint: Selected faces are not displayed with the wireframe modifier 2020-03-24 16:54:54 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I'm marking it as a high priority as it is a regression between 2.79 and 2.80.

I'm marking it as a high priority as it is a regression between 2.79 and 2.80.

This issue was referenced by cf258b02f4

This issue was referenced by cf258b02f4494089d512ecc5185bba9cc9db576e
Jeroen Bakker self-assigned this 2020-03-30 11:22:31 +02:00
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Added subscriber: @M.Pivetta

Added subscriber: @M.Pivetta
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75053
No description provided.